--- a/www/index.html
+++ b/www/index.html
@@ -74,7 +74,7 @@
         <input id="gcm_id" ng-model="gcm_id" type="hidden" name="gcm_id">
         <!-- <a href="#" class="back-button"><i class="back-button-i fa fa-1x fa-chevron-left"></i></a> -->
         <div class="menu-bar" ng-show="user_id != null || skiped == true">
-            <img class="logo-dreamtour1" src="img/LOGO_DREAM.png">
+            <img class="logo-dreamtour1" src="img/LOGO_DREAM.PNG">
         </div>
         <main ng-show="user_id != null || skiped == true" class="mdl-layout__content">
 
