--- a/www/pilihpaket.html
+++ b/www/pilihpaket.html
@@ -56,7 +56,7 @@
                         Home
                     </td>
                     <td>
-                        <img class="logo-dreamtour-menu pull-right" src="img/LOGO_DREAM.png">
+                        <img class="logo-dreamtour-menu pull-right" src="img/LOGO_DREAM.PNG">
                     </td>
                 </tr>
             </table>
