--- a/www/tips.html
+++ b/www/tips.html
@@ -80,7 +80,7 @@
                         Home
                     </td>
                     <td>
-                        <img class="logo-dreamtour-menu pull-right" src="img/LOGO_DREAM.png">
+                        <img class="logo-dreamtour-menu pull-right" src="img/LOGO_DREAM.PNG">
                     </td>
                 </tr>
             </table>
