coba 5 deti notification

--- a/www/chat.html
+++ b/www/chat.html
@@ -119,7 +119,7 @@
     // jumpToPageBottom();
     // var chatBox = document.getElementById("chatBox");
     // chatBox.scrollTop = chatBox.scrollHeight;
-    alert(chatBox.scrollTop);
+    //alert(chatBox.scrollTop);
     // $(".chat").scrollTop($(".chat")[0].scrollHeight)
   </script>
 
