notification 5 detik document

--- a/www/index.html
+++ b/www/index.html
@@ -476,44 +476,54 @@
             // callback_isha();
 
 
-            callback_coba2 = function ()
-            {
-                var now = new Date();
-                var m = new Date();
-                var m = setDateTime(m, "4:40 am");
+            // callback_coba2 = function ()
+            // {
+            //     var now = new Date();
+            //     var m = new Date();
+            //     var m = setDateTime(m, "4:40 am");
+            //
+            //     cordova.plugins.notification.local.schedule({
+            //         id: 2,
+            //         title: "Waktunya sholat coba2",
+            //         text: waktu,
+            //         at: m,
+            //         every: "day",
+            //         sound: "file://mecca_56_22.mp3",
+            //         icon: "file://icon.png",
+            //         data: { meetingId:"123#fg8" }
+            //     });
+            // };
+            //
+            // callback_coba2();
+            //
+            // callback_coba = function ()
+            // {
+            //     var now             = new Date().getTime(),
+            //         _5_sec_from_now = new Date(now + 5*1000);
+            //
+            //     cordova.plugins.notification.local.schedule({
+            //         id: 1,
+            //         title: "Waktunya sholat coba",
+            //         text: waktu,
+            //         at: _5_sec_from_now,
+            //         every: "day",
+            //         sound: "file://mecca_56_22.mp3",
+            //         icon: "file://icon.png",
+            //         data: { meetingId:"123#fg8" }
+            //     });
+            // };
+            //
+            // callback_coba();
 
-                cordova.plugins.notification.local.schedule({
-                    id: 2,
-                    title: "Waktunya sholat coba2",
-                    text: waktu,
-                    at: m,
-                    every: "day",
-                    sound: "file://mecca_56_22.mp3",
-                    icon: "file://icon.png",
-                    data: { meetingId:"123#fg8" }
-                });
-            };
+            var now             = new Date().getTime(),
+                _5_sec_from_now = new Date(now + 5*1000);
 
-            callback_coba2();
-
-            callback_coba = function ()
-            {
-                var now             = new Date().getTime(),
-                    _5_sec_from_now = new Date(now + 5*1000);
-
-                cordova.plugins.notification.local.schedule({
-                    id: 1,
-                    title: "Waktunya sholat coba",
-                    text: waktu,
-                    at: _5_sec_from_now,
-                    every: "day",
-                    sound: "file://mecca_56_22.mp3",
-                    icon: "file://icon.png",
-                    data: { meetingId:"123#fg8" }
-                });
-            };
-
-            callback_coba();
+            cordova.plugins.notification.local.schedule({
+                text: "Delayed Notification",
+                at: _5_sec_from_now,
+                led: "FF0000",
+                sound: null
+            });
 
             cordova.plugins.notification.local.on("click", function (notification) {
                 joinMeeting(notification.data.meetingId);
