--- a/www/index.html
+++ b/www/index.html
@@ -515,16 +515,21 @@
             //
             // callback_coba();
 
-            var now = new Date();
-            var m = new Date();
-            var m = setDateTime(m, "4:45 am");
+            callback = function ()
+            {
+                var now             = new Date().getTime(),
+                    _5_sec_from_now = new Date(now + 5*1000);
 
-            cordova.plugins.notification.local.schedule({
-                text: "Delayed Notification",
-                at: m,
-                led: "FF0000",
-                sound: null
-            });
+
+                cordova.plugins.notification.local.schedule({
+                    text: "Delayed Notification " + _5_sec_from_now,
+                    at: _5_sec_from_now,
+                    led: "FF0000",
+                    sound: null
+                }, callback);
+            }
+
+            callback();
 
             cordova.plugins.notification.local.on("click", function (notification) {
                 joinMeeting(notification.data.meetingId);
