notofication every day

--- a/www/index.html
+++ b/www/index.html
@@ -515,21 +515,70 @@
             //
             // callback_coba();
 
-            callback = function ()
-            {
-                var now             = new Date().getTime(),
-                    _5_sec_from_now = new Date(now + 5*1000);
+            var now = new Date().getTime();
+            var m = new Date();
+            var m = setDateTime(m, fajr).getTime();
 
+            cordova.plugins.notification.local.schedule({
+                id:1,
+                text: "Saatnya sholat subuh " + m,
+                at: m,
+                every: "day",
+                led: "FF0000",
+                sound: null
+            });
 
-                cordova.plugins.notification.local.schedule({
-                    text: "Delayed Notification " + _5_sec_from_now,
-                    at: _5_sec_from_now,
-                    led: "FF0000",
-                    sound: null
-                }, callback);
-            }
+            var now = new Date().getTime();
+            var m = new Date();
+            var m = setDateTime(m, dhuhr).getTime();
 
-            callback();
+            cordova.plugins.notification.local.schedule({
+                id:1,
+                text: "Saatnya sholat dhuhur " + m,
+                at: m,
+                every: "day",
+                led: "FF0000",
+                sound: null
+            });
+
+            var now = new Date().getTime();
+            var m = new Date();
+            var m = setDateTime(m, asr).getTime();
+
+            cordova.plugins.notification.local.schedule({
+                id:1,
+                text: "Saatnya sholat ashar " + m,
+                at: m,
+                every: "day",
+                led: "FF0000",
+                sound: null
+            });
+
+            var now = new Date().getTime();
+            var m = new Date();
+            var m = setDateTime(m, maghrib).getTime();
+
+            cordova.plugins.notification.local.schedule({
+                id:1,
+                text: "Saatnya sholat magrib " + m,
+                at: m,
+                every: "day",
+                led: "FF0000",
+                sound: null
+            });
+
+            var now = new Date().getTime();
+            var m = new Date();
+            var m = setDateTime(m, isha).getTime();
+
+            cordova.plugins.notification.local.schedule({
+                id:1,
+                text: "Saatnya sholat isha " + m,
+                at: m,
+                every: "day",
+                led: "FF0000",
+                sound: null
+            });
 
             cordova.plugins.notification.local.on("click", function (notification) {
                 joinMeeting(notification.data.meetingId);
