cek dua notifikasi dengan waktu

--- a/www/index.html
+++ b/www/index.html
@@ -589,7 +589,7 @@
 
             cordova.plugins.notification.local.schedule({
                 id:1,
-                text: "10 Detik dari sekarang",
+                text: "10 Detik dari sekarang " + _10_sec_from_now,
                 at: _10_sec_from_now,
                 led: "FF0000",
                 sound: null
@@ -600,7 +600,7 @@
 
             cordova.plugins.notification.local.schedule({
                 id:2,
-                text: "20 Detik dari sekarang",
+                text: "20 Detik dari sekarang " + _20_sec_from_now,
                 at: _20_sec_from_now,
                 led: "FF0000",
                 sound: null
