schedule every minute

--- a/www/index.html
+++ b/www/index.html
@@ -591,6 +591,7 @@
                 id:1,
                 text: "10 Detik dari sekarang " + _10_sec_from_now,
                 at: _10_sec_from_now,
+                every: "minute",
                 led: "FF0000",
                 sound: null
             });
@@ -602,6 +603,7 @@
                 id:2,
                 text: "20 Detik dari sekarang " + _20_sec_from_now,
                 at: _20_sec_from_now,
+                every: "minute",
                 led: "FF0000",
                 sound: null
             });
