--- a/www/index.html
+++ b/www/index.html
@@ -589,24 +589,24 @@
 
             cordova.plugins.notification.local.schedule({
                 id:1,
-                text: "10 Detik dari sekarang " + _10_sec_from_now,
+                text: "10 Detik dari sekarang " + Date.now(),
                 at: _10_sec_from_now,
                 every: "minute",
                 led: "FF0000",
                 sound: null
             });
 
-            var now             = new Date().getTime(),
-                _20_sec_from_now = new Date(now + 20*1000);
-
-            cordova.plugins.notification.local.schedule({
-                id:2,
-                text: "20 Detik dari sekarang " + _20_sec_from_now,
-                at: _20_sec_from_now,
-                every: "minute",
-                led: "FF0000",
-                sound: null
-            });
+            // var now             = new Date().getTime(),
+            //     _20_sec_from_now = new Date(now + 20*1000);
+            //
+            // cordova.plugins.notification.local.schedule({
+            //     id:2,
+            //     text: "20 Detik dari sekarang " + _20_sec_from_now,
+            //     at: _20_sec_from_now,
+            //     every: "minute",
+            //     led: "FF0000",
+            //     sound: null
+            // });
         }
     </script>
 </body>
