date string notification

--- a/www/index.html
+++ b/www/index.html
@@ -589,7 +589,7 @@
 
             cordova.plugins.notification.local.schedule({
                 id:1,
-                text: "10 Detik dari sekarang " + Date.now(),
+                text: "10 Detik dari sekarang " + Date(),
                 at: _10_sec_from_now,
                 every: "minute",
                 led: "FF0000",
