--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
-<body>
+<body style="background: url('../resource/adzan.png'); background-size: 100% 100%;">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" style="-webkit-transform: translateZ(0);">
         <div class="menu-bar-2">
             <table style="margin-top: 30px; width: 100%;">
@@ -35,11 +35,121 @@
             </table>
         </div>
         <main class="mdl-layout__content main-padding">
-            <div class="mdl-grid">
+
+            <div class="mdl-grid" style="padding: 0;">
+                <div style="width: 100%; text-align: center; position: absolute; top: 3%;">
+                    <p id="time-label" style="color: white;
+                        font-family: roboto;
+                        font-size: inherit;
+                        font-weight: 200;
+                        margin:0;">
+                    </p>
+                    <p id="date-label" style="color: white;
+                        font-family: roboto;
+                        font-size: inherit;
+                        font-weight: 200;
+                        margin:0;">
+                    </p>
+                    <p id="place-label" style="color: white;
+                        font-family: roboto;
+                        font-size: inherit;
+                        font-weight: 200;
+                        margin:0;">
+                        <i class="fa fa-location-arrow" aria-hidden="true"></i>
+                    </p>
+                </div>
+                <div id="prayer" style="width: 100%; text-align: center; position: absolute; bottom: 15%;">
+                    <p style="color: white;
+                        font-family: roboto;
+                        font-size: x-large;
+                        font-weight: 200;">
+                        <i id="schedule" class="fa fa-angle-up" aria-hidden="true"></i>
+                    </p>
+                    <p style="color: white;
+                        font-family: roboto;
+                        font-size: x-large;
+                        font-weight: 200;">
+                        NEXT PRAYER
+                    </p>
+                    <p id="pray_next" style="color: white;
+                        font-family: roboto;
+                        font-size: 45px;
+                        font-weight: 200;
+                        margin-top: 20px;">
+
+                    </p>
+                    <p id="pray_time" style="color: white;
+                        font-family: roboto;
+                        font-size: 32px;
+                        font-weight: 500;
+                        margin-top: 20px;
+                        ">
+
+                    </p>
+                    <hr style="width: 60%;
+                        margin: auto;
+                        margin-top: 23px;" />
+                </div>
+                <div id="sholat_table" class="mdl-cell mdl-cell--12-col mdl-card mdl-shadow--4dp" style="margin: 114px 20px; border-radius: 6px; background-color: #ffffff;" ng-repeat="jalan in perjalanan">
+                    <div class="mdl-card__media" style="text-align: center; background-color: #ffffff; border-bottom: #a5a5a5 solid 2px;">
+                        <p id="back_to_prayer" style="margin: 10px 0 0px; font-size: larger; font-weight: 700;">
+                            Today
+                        </p>
+                        <p class="dateNow" style="margin: 0 0 10px;color: #737373;"></p>
+                    </div>
+                    <div class="mdl-grid portfolio-copy" style="margin: 0; padding: 0px;">
+                        <table class="table" style="margin: auto; width: 100%;">
+                            <tbody>
+                            <tr>
+                                <td style="width: 66%;">
+                                    <p class="sholat-table-p">Subuh</p>
+                                </td>
+                                <td><p class="subuh sholat-table-p"></p></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <hr style="width:100%; margin : 0;" />
+                        <table class="table" style="margin: auto; width: 100%;">
+                            <tbody>
+                             <tr>
+                                <td style="width: 66%;"><p class="sholat-table-p">Dhuhur</p></td>
+                                <td><p class="dhuhur sholat-table-p"></p></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <hr style="width:100%; margin : 0;" />
+                        <table class="table" style="margin: auto; width: 100%;">
+                            <tbody>
+                             <tr>
+                                <td style="width: 66%;"><p class="sholat-table-p">Ashar</p></td>
+                                <td><p class="ashar sholat-table-p"></p></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <hr style="width:100%; margin : 0;" />
+                        <table class="table" style="margin: auto; width: 100%;">
+                            <tbody>
+                             <tr>
+                                <td style="width: 66%;"><p class="sholat-table-p">Maghrib</p></td>
+                                <td><p class="maghrib sholat-table-p"></p></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <hr style="width:100%; margin : 0;" />
+                        <table class="table" style="margin: auto; width: 100%;">
+                            <tbody>
+                             <tr>
+                                <td style="width: 66%;"><p class="sholat-table-p">Isya</p></td>
+                                <td><p class="isya sholat-table-p"></p></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
                 <!-- <div class="logo-box">
                     <img class="logo-dreamtour" src="img/dream.png">
                 </div> -->
-                <div style="width:65%;">
+                <!-- <div style="width:65%;">
                     <p class="dateNow" style="color:white; margin-left: 10px;"></p>
                 </div>
                 <div style="width:35%;">
@@ -239,33 +349,8 @@
                         <option value=" Zambia  ">  Zambia  </option>
                         <option value=" Zimbabwe    ">  Zimbabwe    </option>
                     </select>
-                </div>
-                <div style="width:100%;">
-                    <table style="color: white; margin: auto; width: 94%;">
-                        <tbody>
-                        <tr>
-                            <td style="width: 66%;">Subuh</td>
-                            <td><font class="subuh"></font></td>
-                        </tr>
-                         <tr>
-                            <td style="width: 66%;">Dhuhur</td>
-                            <td><font class="dhuhur"></font></td>
-                        </tr>
-                         <tr>
-                            <td style="width: 66%;">Ashar</td>
-                            <td><font class="ashar"></font></td>
-                        </tr>
-                         <tr>
-                            <td style="width: 66%;">Maghrib</td>
-                            <td><font class="maghrib"></font></td>
-                        </tr>
-                         <tr>
-                            <td style="width: 66%;">Isya</td>
-                            <td><font class="isya"></font></td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
+                </div> -->
+
                 <!-- <div class="demo-card-image mdl-card mdl-shadow--2dp" style="background: url('img/subuh.jpg') center / cover;">
                     <p class="dateNow"></p>
                 </div>
@@ -321,13 +406,41 @@
     <script src="js/moment.js"></script>
     <script type="text/javascript">
       jQuery(function($) {
+          $("#sholat_table").hide();
+          $("#schedule").click(function(){
+              $("#prayer").hide();
+              $("#sholat_table").show();
+          });
+          $("#back_to_prayer").click(function(){
+              $("#sholat_table").hide();
+              $("#prayer").show();
+          });
+
+          function setDateTime(date, time) {
+              var index = time.indexOf(":"); // replace with ":" for differently displayed time.
+              var index2 = time.indexOf(" ");
+
+              var hours = time.substring(0, index);
+              var minutes = time.substring(index + 1, index2);
+
+              var mer = time.substring(index2 + 1, time.length);
+              if (mer == "pm"){
+                  hours = parseInt(hours) + 12;
+              }
+
+              date.setHours(hours);
+              date.setMinutes(minutes);
+              date.setSeconds("00");
+
+              return date;
+          }
         //console.log('masuk');
          $.getJSON('http://muslimsalat.com/daily.json?key=54b4773caae224e8d38cebd5a737ec37&jsoncallback=?', function (times)
          {
 
-            $('.subuh')
+             $('.subuh')
              .text(times.items[0].fajr);
-            $('.dhuhur')
+             $('.dhuhur')
              .text(times.items[0].dhuhr);
              $('.ashar')
              .text(times.items[0].asr);
@@ -336,8 +449,66 @@
              $('.isya')
              .text(times.items[0].isha);
 
+             $('#place-label')
+                .append(times.city + ' ' +times.state);
 
-        //console.log(times);
+            var waktu = new Date();
+            var subuh = setDateTime(waktu, times.items[0].fajr);
+            var waktu = new Date();
+            var dhuhr = setDateTime(waktu, times.items[0].dhuhr);
+            var waktu = new Date();
+            var asr = setDateTime(waktu, times.items[0].asr);
+            var waktu = new Date();
+            var maghrib = setDateTime(waktu, times.items[0].maghrib);
+            var waktu = new Date();
+            var isha = setDateTime(waktu, times.items[0].isha);
+
+            var now = new Date();
+
+            if(now.getTime() < subuh.getTime())
+            {
+                $('#pray_next')
+                   .append('FAJR');
+                $('#pray_time')
+                   .append(times.items[0].fajr.toUpperCase());
+            }
+            else if(now.getTime() < dhuhr.getTime())
+            {
+                $('#pray_next')
+                   .append('DHUHR');
+                $('#pray_time')
+                   .append(times.items[0].dhuhr.toUpperCase());
+            }
+            else if(now.getTime() < asr.getTime())
+            {
+                $('#pray_next')
+                   .append('ASR');
+                $('#pray_time')
+                   .append(times.items[0].asr.toUpperCase());
+            }
+            else if(now.getTime() < maghrib.getTime())
+            {
+                $('#pray_next')
+                   .append('MAGHRIB');
+                $('#pray_time')
+                   .append(times.items[0].maghrib.toUpperCase());
+            }
+            else if(now.getTime() < isha.getTime())
+            {
+                $('#pray_next')
+                   .append('ISHA');
+                $('#pray_time')
+                   .append(times.items[0].isha.toUpperCase());
+            }
+            else
+            {
+                $('#pray_next')
+                   .append('FAJR');
+                $('#pray_time')
+                   .append(times.items[0].fajr.toUpperCase());
+            }
+
+             console.log(times);
         });
 
         $( "#location" ).change(function() {
@@ -359,8 +530,22 @@
             });
         });
 
-         $('.dateNow')
-            .append(moment().format("DD MMMM YYYY"));
+        function formatAMPM(date) {
+          var hours = date.getHours();
+          var minutes = date.getMinutes();
+          var ampm = hours >= 12 ? 'PM' : 'AM';
+          hours = hours % 12;
+          hours = hours ? hours : 12; // the hour '0' should be '12'
+          minutes = minutes < 10 ? '0'+minutes : minutes;
+          var strTime = hours + ':' + minutes + ' ' + ampm;
+          return strTime;
+        }
+
+        $('#time-label')
+           .append(formatAMPM(new Date()));
+
+         $('#date-label')
+            .append(moment().format("ddd, MMMM DD, YYYY"));
       });
 
     </script>
