--- a/www/index.html
+++ b/www/index.html
@@ -596,7 +596,7 @@
             //     sound: null
             // });
 
-            var coba_waktu = "1:25 am";
+            var coba_waktu = "1:35 am";
             var waktu_isha = new Date();
             var waktu_isha = setDateTime(waktu_isha, coba_waktu);
 
@@ -609,7 +609,7 @@
                 sound: "file://mecca_56_22.mp3"
             });
 
-            var coba_waktu = "1:26 am";
+            var coba_waktu = "1:36 am";
             var waktu_isha = new Date();
             var waktu_isha = setDateTime(waktu_isha, coba_waktu);
 
@@ -622,24 +622,25 @@
                 sound: null
             });
 
-            var coba_waktu = "1:28 am";
+            var coba_waktu = "1:37 am";
             var waktu_isha = new Date();
             var waktu_isha = setDateTime(waktu_isha, coba_waktu);
             cordova.plugins.notification.local.update({
                 id:1,
-                text: "Saatnya sholat isya update" + waktu_isha,
+                text: "Saatnya sholat isya update 1 " + waktu_isha,
                 at: waktu_isha,
                 every: "day",
                 led: "FF0000",
                 sound: null
             });
 
-            var coba_waktu = "1:28 am";
+            var coba_waktu = "1:37 am";
             var waktu_isha = new Date();
             var waktu_isha = setDateTime(waktu_isha, coba_waktu);
+
             cordova.plugins.notification.local.update({
-                id:1,
-                text: "Saatnya sholat isya update" + waktu_isha,
+                id:2,
+                text: "Saatnya sholat isya update 2 " + waktu_isha,
                 at: waktu_isha,
                 every: "day",
                 led: "FF0000",
