--- a/www/index.html
+++ b/www/index.html
@@ -596,7 +596,7 @@
             //     sound: null
             // });
 
-            var coba_waktu = "2:07 am";
+            var coba_waktu = "2:35 am";
             var waktu_isha = new Date();
             var waktu_isha = setDateTime(waktu_isha, coba_waktu);
 
@@ -608,7 +608,7 @@
                 sound: "file://mecca_56_22.mp3"
             });
 
-            var coba_waktu = "2:08 am";
+            var coba_waktu = "2:36 am";
             var waktu_isha = new Date();
             var waktu_isha = setDateTime(waktu_isha, coba_waktu);
 
@@ -620,7 +620,7 @@
                 sound: null
             });
 
-            var coba_waktu = "2:09 am";
+            var coba_waktu = "2:37 am";
             var waktu_isha = new Date();
             var waktu_isha = setDateTime(waktu_isha, coba_waktu);
             cordova.plugins.notification.local.update({
@@ -646,6 +646,10 @@
             //     sound: null
             // });
         }
+    </script>
+    <!-- initialize -->
+    <script type="text/javascript">
+        app.initialize();
     </script>
 </body>
 
