jadwal sholat volume

--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -105,6 +105,7 @@
                                     <p class="sholat-table-p">Subuh</p>
                                 </td>
                                 <td><p class="subuh sholat-table-p"></p></td>
+                                <td class="table-volume-icon"><i class="fa fa-volume-off" aria-hidden="true"></i></td>
                             </tr>
                             </tbody>
                         </table>
@@ -114,6 +115,7 @@
                              <tr>
                                 <td style="width: 66%;"><p class="sholat-table-p">Dhuhur</p></td>
                                 <td><p class="dhuhur sholat-table-p"></p></td>
+                                <td class="table-volume-icon"><i class="fa fa-volume-off" aria-hidden="true"></i></td>
                             </tr>
                             </tbody>
                         </table>
@@ -123,6 +125,7 @@
                              <tr>
                                 <td style="width: 66%;"><p class="sholat-table-p">Ashar</p></td>
                                 <td><p class="ashar sholat-table-p"></p></td>
+                                <td class="table-volume-icon"><i class="fa fa-volume-off" aria-hidden="true"></i></td>
                             </tr>
                             </tbody>
                         </table>
@@ -132,6 +135,7 @@
                              <tr>
                                 <td style="width: 66%;"><p class="sholat-table-p">Maghrib</p></td>
                                 <td><p class="maghrib sholat-table-p"></p></td>
+                                <td class="table-volume-icon"><i class="fa fa-volume-off" aria-hidden="true"></i></td>
                             </tr>
                             </tbody>
                         </table>
@@ -141,6 +145,7 @@
                              <tr>
                                 <td style="width: 66%;"><p class="sholat-table-p">Isya</p></td>
                                 <td><p class="isya sholat-table-p"></p></td>
+                                <td class="table-volume-icon"><i class="fa fa-volume-off" aria-hidden="true"></i></td>
                             </tr>
                             </tbody>
                         </table>
