--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -101,7 +101,7 @@
                         <table class="table" style="margin: auto; width: 100%;">
                             <tbody>
                             <tr>
-                                <td style="width: 66%;">
+                                <td style="width: 61%;">
                                     <p class="sholat-table-p">Subuh</p>
                                 </td>
                                 <td><p class="subuh sholat-table-p"></p></td>
@@ -113,7 +113,7 @@
                         <table class="table" style="margin: auto; width: 100%;">
                             <tbody>
                              <tr>
-                                <td style="width: 66%;"><p class="sholat-table-p">Dhuhur</p></td>
+                                <td style="width: 61%;"><p class="sholat-table-p">Dhuhur</p></td>
                                 <td><p class="dhuhur sholat-table-p"></p></td>
                                 <td class="table-volume-icon"><i class="fa fa-volume-off" aria-hidden="true"></i></td>
                             </tr>
@@ -123,7 +123,7 @@
                         <table class="table" style="margin: auto; width: 100%;">
                             <tbody>
                              <tr>
-                                <td style="width: 66%;"><p class="sholat-table-p">Ashar</p></td>
+                                <td style="width: 61%;"><p class="sholat-table-p">Ashar</p></td>
                                 <td><p class="ashar sholat-table-p"></p></td>
                                 <td class="table-volume-icon"><i class="fa fa-volume-off" aria-hidden="true"></i></td>
                             </tr>
@@ -133,7 +133,7 @@
                         <table class="table" style="margin: auto; width: 100%;">
                             <tbody>
                              <tr>
-                                <td style="width: 66%;"><p class="sholat-table-p">Maghrib</p></td>
+                                <td style="width: 61%;"><p class="sholat-table-p">Maghrib</p></td>
                                 <td><p class="maghrib sholat-table-p"></p></td>
                                 <td class="table-volume-icon"><i class="fa fa-volume-off" aria-hidden="true"></i></td>
                             </tr>
@@ -143,7 +143,7 @@
                         <table class="table" style="margin: auto; width: 100%;">
                             <tbody>
                              <tr>
-                                <td style="width: 66%;"><p class="sholat-table-p">Isya</p></td>
+                                <td style="width: 61%;"><p class="sholat-table-p">Isya</p></td>
                                 <td><p class="isya sholat-table-p"></p></td>
                                 <td class="table-volume-icon"><i class="fa fa-volume-off" aria-hidden="true"></i></td>
                             </tr>
@@ -408,6 +408,7 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script src="js/material.min.js"></script>
     <script src="js/jquery.min.js"></script>
+    <script src="js/index.js"></script>
     <script src="js/moment.js"></script>
     <script type="text/javascript">
       jQuery(function($) {
